   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 3 skills:
   > Focus Up: Special skill learned at level 22.
   > [P] Sharp Eye: Passive skill learned at level 24.
   > [P] Masterful: Passive skill learned at level 25.
  ~ Tomes, 3 skills:
   > Dark Orb
   > Ice II
   > Wyvern's Fury
 - Added 67 new items:
  ~ 7 recovery/buff items:
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Tomato
  ~ 27 materials:
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Icy Gel
   > Ice Cube
   > Frozen Core
   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 12 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
   > INT Scroll
  ~ 6 fishing related items:
   > Flimsy Rod
   > Basic Rod
   > Reinforced Rod
   > Worm
   > Fathead Minnow
   > Northern Redbelly Dace
  ~ 15 miscellaneous items:
   > Phantasmal Charm
   > Advanced Salvage Kit
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Tellurium Pickaxe ★
   > Tellurium Pickaxe ★★
   > Tellurium Pickaxe ★★★
   > Magical Ocarina
   > Battle Cry
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TROPHY]
   > [REDACTED TROPHY]
 - Added 72 new equipment items:
  ~ 13 weapons:
   > Shadowspec Sword
   > Shadowspec Warhammer
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand