@@ -5994,7 +5994,7 @@
     ],
     "gold": 432,
     "name": "Baby Dragon",
-    "note": "<Floating>\n<Floating Rate: 0.05>\n<Breathing Speed: 20>\n<Attack Animation: 211>\n<Element Absorb: 6, 7>\n\n<AI Priority>\nTurn % 4 === 1: Future Sight, Highest HP\nTurn % 4 === 2: Cyclone\nTurn % 4 === 3: Spike Shock\nTurn % 4 === 0: Spike Shock\n</AI Priority>\n\n<Enemy Drops>\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 12.5%\nEnchanted Dragon Scale: 0%\nEarth Essence: 20%\nWind Essence: 20%\n</Enemy Drops>\n\n<Conditional Enchanted Dragon Scale Drop>\nSwitch 95 ON: +50%\n</Conditional Enchanted Dragon Scale Drop>",
+    "note": "<Floating>\n<Floating Rate: 0.05>\n<Breathing Speed: 20>\n<Attack Animation: 211>\n<Element Absorb: 6, 7>\n\n<AI Priority>\nTurn % 4 === 1: Future Sight, Highest HP\nTurn % 4 === 2: Cyclone\nTurn % 4 === 3: Spike Shock\nTurn % 4 === 0: Spike Shock\n</AI Priority>\n\n<Enemy Drops>\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 12.5%\nEnchanted Dragon Scale: 0%\nDragonfruit: 20%\nEarth Essence: 20%\nWind Essence: 20%\n</Enemy Drops>\n\n<Conditional Enchanted Dragon Scale Drop>\nSwitch 95 ON: +50%\n</Conditional Enchanted Dragon Scale Drop>",
     "params": [
       6000,
       0,
@@ -6131,7 +6131,7 @@
     ],
     "gold": 5000,
     "name": "Dilong, Nature Dragon",
-    "note": "<Sideview Battler: Dilong>\n<Sideview No Collapse>\n<Scale Sprite: 200%>\n<Floating>\n<Floating Rate: 0.025>\n<Attack Animation: 106>\n<Element Absorb: 6, 7>\n<HP Gauge Width: 360>\n\n<Enemy Drops>\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 12.5%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\n</Enemy Drops>\n\n<AI Priority>\nUser HP% param <= 75% +++ Eval $gameVariables.value(53) === 0: Draconic Healing\nUser HP% param <= 50% +++ Eval $gameVariables.value(53) === 1: Draconic Healing\nUser HP% param <= 25% +++ Eval $gameVariables.value(53) === 2: Draconic Healing\nUser HP% param <= 10% +++ Eval $gameVariables.value(53) === 3: Draconic Healing\n\nUser HP% param > 75% +++ Turn % 4 === 1: Future Sight, Highest HP\nUser HP% param > 75% +++ Turn % 4 === 2: Cyclone\nUser HP% param > 75% +++ Turn % 4 === 3: Spike Shock\nUser HP% param > 75% +++ Turn % 4 === 0: Spike Shock\n\nUser HP% param > 50% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 50% +++ Turn % 8 === 3: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 50% +++ Turn % 8 === 7: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 25% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 25% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 25% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 10% +++ Turn % 8 === 1: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 10% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 5: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 0: Spike Shock\n\nTurn % 3 === 1: Wyvern's Fury\nTurn % 3 === 2: Immortal Spears\nTurn % 3 === 0: Spike Shock\n</AI Priority>",
+    "note": "<Sideview Battler: Dilong>\n<Sideview No Collapse>\n<Scale Sprite: 200%>\n<Floating>\n<Floating Rate: 0.025>\n<Attack Animation: 106>\n<Element Absorb: 6, 7>\n<HP Gauge Width: 360>\n\n<Enemy Drops>\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 100%\nEnchanted Dragon Scale: 50%\nEnchanted Dragon Scale: 25%\nEnchanted Dragon Scale: 12.5%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 100%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 50%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 25%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragon Scale: 12.5%\nDragonfruit: 20%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nEarth Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nWind Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\nLight Essence: 100%\n</Enemy Drops>\n\n<AI Priority>\nUser HP% param <= 75% +++ Eval $gameVariables.value(53) === 0: Draconic Healing\nUser HP% param <= 50% +++ Eval $gameVariables.value(53) === 1: Draconic Healing\nUser HP% param <= 25% +++ Eval $gameVariables.value(53) === 2: Draconic Healing\nUser HP% param <= 10% +++ Eval $gameVariables.value(53) === 3: Draconic Healing\n\nUser HP% param > 75% +++ Turn % 4 === 1: Future Sight, Highest HP\nUser HP% param > 75% +++ Turn % 4 === 2: Cyclone\nUser HP% param > 75% +++ Turn % 4 === 3: Spike Shock\nUser HP% param > 75% +++ Turn % 4 === 0: Spike Shock\n\nUser HP% param > 50% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 50% +++ Turn % 8 === 3: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 50% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 50% +++ Turn % 8 === 7: Spike Shock\nUser HP% param > 50% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 25% +++ Turn % 8 === 1: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 25% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 5: Future Sight, Highest HP\nUser HP% param > 25% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 25% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 25% +++ Turn % 8 === 0: Spike Shock\n\nUser HP% param > 10% +++ Turn % 8 === 1: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 2: Cyclone\nUser HP% param > 10% +++ Turn % 8 === 3: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 4: Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 5: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 6: Immortal Spears\nUser HP% param > 10% +++ Turn % 8 === 7: Giga Spike Shock\nUser HP% param > 10% +++ Turn % 8 === 0: Spike Shock\n\nTurn % 3 === 1: Wyvern's Fury\nTurn % 3 === 2: Immortal Spears\nTurn % 3 === 0: Spike Shock\n</AI Priority>",
     "params": [
       30000,
       0,
