@@ -41,8 +41,8 @@ Additions:
    > Dark Orb
    > Ice II
    > Wyvern's Fury
- - Added 67 new items:
-  ~ 7 recovery/buff items:
+ - Added 68 new items:
+  ~ 8 recovery/buff items:
    > Large Potion
    > Large Elixir
    > Water Jug
@@ -50,6 +50,7 @@ Additions:
    > Stimulant
    > Vicious Root
    > Tomato
+   > Dragonfruit
   ~ 27 materials:
    > Malicious Essence
    > Shadowspec Ingot
